syntax = "proto3";

package auth.v1;

option go_package = "app/gen/proto/auth/v1;authv1";

enum GENDER {
      MALE = 0;
      FEMALE = 1;
}

message LoginRequest {
      string username = 1;
      string password = 2;
}

message LoginResponse {
      string token = 1;
}

message RegisterRequest{
      string username = 1;
      string password = 2;
      GENDER gender = 3;
      string name = 4;
      string profile = 5;
      string status = 6;
      bool premium = 7;
}

message RegisterResponse{
      string id = 1;
      string created_at = 2;
      string updated_at = 3;
      string username = 4;
      string name = 5;
      string profile = 6;
      string status = 7;
      bool premium = 8;
}

service ServiceAuth {
      rpc Login(LoginRequest) returns (LoginResponse);
      rpc Register(RegisterRequest) returns (RegisterResponse);
}
